# kindle_rust

./: Cargo.toml  notes
.cargo/: .config.swp  config
src/: fb.rs  main.rs
